--- a/NexuSeguros/src/main/java/com/mycompany/views/inicioAgente.form
+++ b/NexuSeguros/src/main/java/com/mycompany/views/inicioAgente.form
@@ -5,6 +5,9 @@
     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
       <Color blue="33" green="33" red="33" type="rgb"/>
     </Property>
+    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+      <Dimension value="[685, 480]"/>
+    </Property>
   </Properties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
@@ -21,12 +24,15 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jPanel1" alignment="0" max="32767" attributes="0"/>
+          <Component id="jPanel1" alignment="0" pref="695" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jPanel1" alignment="0" max="32767" attributes="0"/>
+          <Group type="102" alignment="1" attributes="0">
+              <Component id="jPanel1" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
   </Layout>
@@ -35,6 +41,9 @@
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="ff" green="ff" red="ff" type="rgb"/>
+        </Property>
+        <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[685, 480]"/>
         </Property>
       </Properties>
 
@@ -48,7 +57,7 @@
           </AuxValues>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="343" y="20" width="340" height="460"/>
+              <AbsoluteConstraints x="340" y="20" width="340" height="460"/>
             </Constraint>
           </Constraints>
 
@@ -58,7 +67,7 @@
               <Properties>
                 <Property name="columns" type="int" value="20"/>
                 <Property name="rows" type="int" value="5"/>
-                <Property name="text" type="java.lang.String" value="edwin"/>
+                <Property name="text" type="java.lang.String" value="                                     Seguro de auto&#xa;&#xa;1- Da&#xf1;os a terceros&#xa;Cubre los da&#xf1;os materiales y lesiones corporales que &#xa;puedas causar a otras personas o veh&#xed;culos en un accidente &#xa;donde t&#xfa; eres responsable&#xa;&#xa;2- Da&#xf1;os materiales al veh&#xed;culo asegurado&#xa;Protege tu auto contra da&#xf1;os ocasionados por&#xa;accidentes, volcaduras, choques, ca&#xed;da de objetos, entre otros&#xa;&#xa;3- Robo total o parcial&#xa;Cubre el robo del veh&#xed;culo completo o de partes&#xa; espec&#xed;ficas, como espejos, rines o est&#xe9;reos, &#xa;dependiendo del tipo de cobertura.&#xa;&#xa;4- Responsabilidad civil&#xa;Ampara el pago de da&#xf1;os a terceros por lesiones,&#xa; muerte o afectaciones a sus bienes. Este es obligatorio&#xa; por ley en muchos pa&#xed;ses&#xa;&#xa;5- Gastos m&#xe9;dicos ocupantes&#xa;Cubre los gastos m&#xe9;dicos de los ocupantes del veh&#xed;culo&#xa; asegurado en caso de accidente, incluyendo hospitalizaci&#xf3;n,&#xa; medicamentos y atenci&#xf3;n m&#xe9;dica.&#xa;&#xa;"/>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                   <Border info="null"/>
                 </Property>
@@ -72,7 +81,7 @@
           </AuxValues>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="345" y="20" width="340" height="460"/>
+              <AbsoluteConstraints x="340" y="20" width="340" height="460"/>
             </Constraint>
           </Constraints>
 
@@ -82,7 +91,7 @@
               <Properties>
                 <Property name="columns" type="int" value="20"/>
                 <Property name="rows" type="int" value="5"/>
-                <Property name="text" type="java.lang.String" value="oscar"/>
+                <Property name="text" type="java.lang.String" value="                                        Seguro de robo&#xa;&#xa;1- Robo total del veh&#xed;culo&#xa;Cubre el valor del autom&#xf3;vil en caso de que sea sustra&#xed;do&#xa;y no sea recuperado. La aseguradora indemniza al asegurado&#xa;con base en el valor comercial o convenido del veh&#xed;culo.&#xa;&#xa;2- Robo parcial&#xa;Algunas p&#xf3;lizas incluyen robo de partes o accesorios del&#xa;veh&#xed;culo,  como llantas, espejos, est&#xe9;reos, computadoras, &#xa;entre otros.&#xa;&#xa;3- Da&#xf1;os por intento de robo&#xa;Si el veh&#xed;culo no fue robado, pero sufri&#xf3; da&#xf1;os por intento &#xa;de robo (como cristales rotos, cerraduras forzadas o cableado&#xa; da&#xf1;ado), el seguro puede cubrir la reparaci&#xf3;n.&#xa;&#xa;4- Gastos derivados del robo&#xa;Algunas aseguradoras cubren gastos como el traslado &#xa;del veh&#xed;culo si es recuperado o la gestor&#xed;a para el&#xa; tr&#xe1;mite de baja ante autoridades.&#xa;&#xa;5- Asistencia legal y orientaci&#xf3;n&#xa;En muchos casos, el seguro tambi&#xe9;n ofrece asesor&#xed;a&#xa;jur&#xed;dica para levantar la denuncia ante el Ministerio&#xa;P&#xfa;blico y llevar el proceso legal correspondiente."/>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                   <Border info="org.netbeans.modules.form.compat2.border.MatteColorBorderInfo">
                     <MatteColorBorder/>
@@ -194,7 +203,7 @@
           </AuxValues>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="345" y="20" width="340" height="460"/>
+              <AbsoluteConstraints x="340" y="20" width="340" height="460"/>
             </Constraint>
           </Constraints>
 
@@ -204,7 +213,7 @@
               <Properties>
                 <Property name="columns" type="int" value="20"/>
                 <Property name="rows" type="int" value="5"/>
-                <Property name="text" type="java.lang.String" value="Cesar"/>
+                <Property name="text" type="java.lang.String" value="                                  Seguro de vida&#xa;&#xa;1- Fallecimiento del asegurado&#xa;Es la cobertura principal. En caso de que el asegurado fallezca,&#xa;la aseguradora paga la suma asegurada a los&#xa;beneficiarios designados.&#xa;&#xa;2- Invalidez total y permanente&#xa;Si el asegurado sufre una discapacidad que le impida&#xa;seguir trabajando, puede recibir el pago total &#xa;o parcial de la suma asegurada.&#xa;&#xa;3- Enfermedades graves&#xa;Algunas p&#xf3;lizas cubren enfermedades como c&#xe1;ncer, &#xa;infarto o accidente cerebrovascular, brindando &#xa;un adelanto del capital asegurado para cubrir gastos m&#xe9;dicos.&#xa;&#xa;4- Gastos funerarios&#xa;Algunas aseguradoras ofrecen cobertura para cubrir los costos&#xa; del funeral, ya sea como reembolso o servicio directo.&#xa;&#xa;5- Ahorro o inversi&#xf3;n (en seguros de vida con componente&#xa;financiero)En p&#xf3;lizas de vida con ahorro, parte de las primas&#xa;se destinan a generar un fondo que el asegurado puede&#xa;retirar en el futuro o usar como complemento para su retiro.&#xa;"/>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                   <Border info="org.netbeans.modules.form.compat2.border.MatteColorBorderInfo">
                     <MatteColorBorder/>
@@ -220,7 +229,7 @@
           </AuxValues>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="345" y="20" width="340" height="460"/>
+              <AbsoluteConstraints x="340" y="20" width="340" height="460"/>
             </Constraint>
           </Constraints>
 
@@ -230,7 +239,7 @@
               <Properties>
                 <Property name="columns" type="int" value="20"/>
                 <Property name="rows" type="int" value="5"/>
-                <Property name="text" type="java.lang.String" value="Saul"/>
+                <Property name="text" type="java.lang.String" value="                                      Seguro de incendio&#xa;&#xa;1- Da&#xf1;os por incendio o explosi&#xf3;n&#xa;Cubre los da&#xf1;os materiales causados directamente por fuego,&#xa;explosi&#xf3;n de gas, cortocircuitos o combusti&#xf3;n accidental.&#xa;&#xa;2- P&#xe9;rdida total o parcial del inmueble&#xa;En caso de que el incendio destruya total o parcialmente&#xa;la propiedad asegurada, la aseguradora indemniza&#xa;al propietario seg&#xfa;n el valor estipulado en la p&#xf3;liza.&#xa;&#xa;3- Contenido del inmueble&#xa;Protege muebles, electrodom&#xe9;sticos, maquinaria, &#xa;mercanc&#xed;as u otros bienes dentro del inmueble &#xa;asegurado al momento del siniestro.&#xa;&#xa;4- Gastos de demolici&#xf3;n y remoci&#xf3;n de escombros&#xa;Cubre los costos necesarios para demoler estructuras&#xa;da&#xf1;adas y retirar restos del incendio.&#xa;&#xa;5- Gastos de reconstrucci&#xf3;n o reparaci&#xf3;n&#xa;La aseguradora puede cubrir parcial o totalmente los&#xa;costos para restaurar la propiedad a su estado original.&#xa;&#xa;"/>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                   <Border info="org.netbeans.modules.form.compat2.border.MatteColorBorderInfo">
                     <MatteColorBorder/>
@@ -288,6 +297,29 @@
             </Constraint>
           </Constraints>
         </Component>
+        <Container class="javax.swing.JScrollPane" name="jScrollPane5">
+          <AuxValues>
+            <AuxValue name="autoScrollPane" type="java.lang.Boolean" value="true"/>
+          </AuxValues>
+          <Constraints>
+            <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
+              <AbsoluteConstraints x="343" y="20" width="340" height="460"/>
+            </Constraint>
+          </Constraints>
+
+          <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
+          <SubComponents>
+            <Component class="javax.swing.JTextArea" name="SeguroDeAuto1">
+              <Properties>
+                <Property name="columns" type="int" value="20"/>
+                <Property name="rows" type="int" value="5"/>
+                <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
+                  <Border info="null"/>
+                </Property>
+              </Properties>
+            </Component>
+          </SubComponents>
+        </Container>
       </SubComponents>
     </Container>
   </SubComponents>
